finish fixing bugs on safari for #876

--- a/css/custom-style-flare.css
+++ b/css/custom-style-flare.css
@@ -207,7 +207,6 @@ section.row {
       -ms-flex: 100%;
           flex: 100%;
   width: 100%;
-  padding: 0 0.5em;
 }
 .tm-summary {
   display: none;
@@ -271,7 +270,6 @@ main {
   display: -ms-flexbox;
   display: flex;
   overflow-y: auto;
-  padding: 0.5em;
 }
 section.row__label {
   background: transparent;
@@ -432,6 +430,7 @@ article.result a:hover h3 {
 }
 .summary {
   padding: 1.5em 1em 0.5em;
+  width: 100%;
 }
 .seen {
   display: none;
@@ -462,12 +461,11 @@ ul.side-nav li {
 dl {
   background: white;
   border: 1px solid #dbdbdb;
-  border-radius: 3px;
   border-bottom: 0;
-  margin: 0;
+  margin: 0.5em;
 }
 dt {
-  padding: 0 0.5em;
+  padding: 0.35em 0.5em;
   background: #dbdbdb;
 }
 dd {
@@ -1130,7 +1128,7 @@ img {
   margin: 0.5em 0 0 0;
 }
 .alert {
-  width: 100%;
+  width: 98%;
   border: none;
   border-radius: 3px;
   font-size: 14px;
@@ -1361,7 +1359,7 @@ span.alert-text {
     position: fixed;
     top: 4em;
     left: 5%;
-    height: 100%;
+    height: 90%;
     padding: 0 0 4em 0;
   }
   aside {
@@ -1618,6 +1616,9 @@ span.alert-text {
   }
   .mobile-hide {
     display: block;
+  }
+  dl {
+    margin: 0;
   }
 }
 @media (min-width: 1285px) {
